--- a/lib/i18n/locales/ru.json
+++ b/lib/i18n/locales/ru.json
@@ -1,59 +1,59 @@
 {
   "header": {
     "nav": {
-      "partner": "Стать партнером",
-      "documentation": "API интеграция"
+      "partner": "Давайте партнер",
+      "documentation": "Интеграция API"
     },
     "auth": {
-      "login": "Войти",
-      "signup": "Регистрация"
+      "login": "Авторизоваться",
+      "signup": "Зарегистрироваться"
     }
   },
   "hero": {
     "title": {
-      "part1": "Умный",
-      "part2": "способ",
-      "part3": "управления",
-      "part4": "платежами"
+      "part1": "Умнее",
+      "part2": "Путь к",
+      "part3": "Управлять",
+      "part4": "Ваши платежи"
     },
-    "description": "В Payzln мы понимаем, что управление платежами может быть сложным и отнимать много времени. Именно поэтому мы создали платежный шлюз, который беспрепятственно обрабатывает платежи, давая вам возможность сосредоточиться на самом важном – развитии вашего бизнеса.",
+    "description": "В Payzln мы понимаем, что управление платежами может быть сложным и трудоемким. Вот почему мы создали платежный шлюз, который плавно обрабатывает платежи, давая вам свободу сосредоточиться на том, что важнее всего - развивать ваш бизнес.",
     "cta": "Связаться с нами",
     "notification": {
-      "greeting": "Привет, Таня!",
-      "message": "Надеемся, вам нравится тоник для ухода! Пора купить продукт с эксклюзивной скидкой для вас",
+      "greeting": "Эй, Таня,",
+      "message": "Мы надеемся, что вам понравится тонер для лечения продукта! Пора купить продукт с эксклюзивной скидкой для вас",
       "cta": "Купить сейчас"
     },
-    "badge": "Платежный шлюз Payzln"
+    "badge": "Payzln Платежный шлюз"
   },
   "features": {
     "items": {
-      "money": "Управляйте деньгами по-своему",
-      "insights": "Аналитика для развития бизнеса",
-      "integration": "Простая интеграция и быстрый запуск",
-      "flexibility": "Гибкость в способах оплаты"
+      "money": "Управляйте своими деньгами по -своему",
+      "insights": "Понимание для питания вашего бизнеса",
+      "integration": "Легкая интеграция, чтобы жить за считанные минуты",
+      "flexibility": "Общая гибкость в режимах оплаты"
     }
   },
   "empowerment": {
-    "title": "Развиваем бизнес по всему миру",
-    "description": "Pay Zillion создан для обработки платежей между конечными пользователями и продавцами. Наша миссия – сделать платежи доступными и удобными для бизнеса любого масштаба, где бы он ни находился."
+    "title": "Расширение возможностей предприятий по всему миру",
+    "description": "Pay Zillion предназначен для облегчения платежей между конечными пользователями и торговцами. Наша миссия состоит в том, чтобы сделать платежи доступными и беспрепятственными для предприятий всех размеров, где бы они ни работали."
   },
   "paymentOptions": {
     "items": {
       "methods": {
-        "title": "Широкий выбор способов оплаты",
-        "description": "От традиционных вариантов, таких как UPI, банковский перевод (IMPS, NEFT, RTGS), до современных решений, таких как обмен фиата на криптовалюту и обратно."
+        "title": "Широкий спектр способов оплаты",
+        "description": "От традиционных вариантов, таких как UPI, Bank Transfer (IMPS, NEFT, RTGS) до передовых решений, таких как Fiat, Crypto и Crypto to Fiat."
       },
       "custom": {
-        "title": "Настраиваемые платежные опции",
-        "description": "Настройте платежные опции в соответствии с уникальными потребностями вашего бизнеса и местными нормативами."
+        "title": "Индивидуальные варианты оплаты",
+        "description": "Настройте варианты оплаты в соответствии с вашими уникальными потребностями бизнеса и соблюдайте местные правила."
       },
       "offers": {
-        "title": "Настройка предложений",
-        "description": "Легко создавайте акции и беспроцентные рассрочки."
+        "title": "Предложение настройки",
+        "description": "Создать предложения и бесплатные варианты EMI легко."
       },
       "international": {
-        "title": "Прием международных платежей",
-        "description": "Выходите на глобальные рынки с лучшими международными платежными системами."
+        "title": "Принять международные платежи",
+        "description": "С легкостью подключитесь к мировым рынкам, с лучшими куратованными международными платежными системами."
       }
     }
   },
@@ -61,104 +61,97 @@
     "items": {
       "merchants": {
         "prefix": "",
-        "value": "27",
-        "suffix": "+",
-        "label": "Продавцов",
-        "description": "Нам доверяют более 25 продавцов по всему миру!"
+        "suffix": null,
+        "label": "Торговцы",
+        "description": "Доверяют более 27 торговцам по всему миру и растут!"
       },
       "transactions": {
-        "prefix": "$",
-        "value": "2.4",
-        "suffix": "M+",
-        "label": "Миллионов транзакций",
-        "description": "Обрабатываем миллионы транзакций ежемесячно"
+        "prefix": null,
+        "suffix": null,
+        "label": "Миллион сделок",
+        "description": "Обработка миллионов в транзакциях ежемесячно"
       },
       "crypto": {
-        "prefix": "€",
-        "value": "1.2",
-        "suffix": "B+",
-        "label": "Миллиардов в криптовалюте",
-        "description": "Обрабатываем более €1 млрд в криптовалютных транзакциях ежемесячно"
+        "prefix": null,
+        "suffix": null,
+        "label": "Миллиард в крипто",
+        "description": "Обрабатывать более 1B в крипто -транзакциях ежемесячно"
       }
     },
     "cta": "Связаться с нами"
   },
   "customers": {
-    "title": "Ваши клиенты на первом месте",
-    "description": "Потому что ваши клиенты заслуживают безупречного процесса оплаты, а вы заслуживаете меньше забот.",
+    "title": "Ваши клиенты в первую очередь",
+    "description": "Потому что ваши клиенты заслуживают бесшовного процесса оплаты, и вы заслуживаете меньше, чтобы беспокоиться.",
     "features": {
-      "money": "Управляйте деньгами по-своему",
-      "links": "Гибкое создание платежных ссылок",
-      "options": "Выбор из множества способов оплаты"
+      "money": "Вовремя, безрисковый процесс расчета",
+      "links": "Гибкое создание ссылки на оплату",
+      "options": "Выбор из множества вариантов оплаты"
     }
   },
   "suiteSpot": {
-    "title": "Ваш набор инструментов",
-    "description": "Сотрудничая с PayZln, вы получаете доступ к мощному набору инструментов и функций, разработанных для процветания вашего бизнеса.",
+    "title": "Ваше место для номера",
+    "description": "Когда вы сотрудничаете с Payzln, вы получаете доступ к мощному набору инструментов и функций, разработанных, чтобы помочь вашему бизнесу процветать.",
     "features": {
-      "pos": "POS-система для умного управления розницей",
-      "app": "Бизнес-приложение PayZln Gateway для управления на ходу",
-      "gateway": "Бизнес-шлюз для упрощенного управления",
-      "international": "Выбор из лучших международных платежных систем",
-      "analytics": "Продвинутая аналитика и отчетность для принятия решений"
+      "pos": "Программное обеспечение для биллинга для счетов для интеллектуального управления розничной торговлей",
+      "app": "Payzln Gateway для бизнес-приложения для управления на ходу",
+      "gateway": "Business Gateway для упрощенного управления",
+      "international": "Выберите из лучших международных платежных стеков",
+      "analytics": "Усовершенствованная аналитика и отчетность для получения данных, управляемых данными,"
     }
   },
   "goLive": {
-    "title": "Запуск за считанные минуты!",
-    "description": "Благодаря простой интеграции запустите прием платежей за считанные минуты! Зарегистрируйтесь для умного управления платежами.",
+    "title": "Иди жить за считанные минуты!",
+    "description": "С легкой интеграцией, возьмите свои платежи вживую за считанные минуты! Подпишитесь на более разумный способ управления своими платежами.",
     "features": {
       "suite": {
-        "title": "Доступ ко",
-        "subtitle": "всем продуктам"
+        "subtitle": "Доступ ко всему набору продуктов"
       },
       "onboarding": {
-        "title": "Быстрое",
-        "subtitle": "подключение"
+        "subtitle": "Быстрая борьба"
       },
       "options": {
-        "title": "Выбор из множества",
-        "subtitle": "платежных опций"
+        "subtitle": "Выбор из множества вариантов оплаты"
       },
       "support": {
-        "title": "Поддержка",
-        "subtitle": "24/7"
+        "subtitle": "24 × 7 поддержка клиентов"
       }
     },
+    "button": "Начните",
     "checklist": {
-      "title": "Быстрый чек-лист подключения",
+      "title": "Краткий контрольный список",
       "items": {
-        "account": "Создать аккаунт",
-        "verify": "Подтвердить бизнес",
-        "setup": "Настроить способы оплаты",
+        "account": "Завести аккаунт",
+        "verify": "Проверьте свой бизнес",
+        "setup": "Настройка методов оплаты",
         "integrate": "Интегрировать API",
         "test": "Тестовые транзакции",
-        "live": "Запуск"
+        "live": "Иди жить"
       }
     }
   },
   "footer": {
-    "description": "Умный способ управления платежами. Беспрепятственно обрабатывайте платежи и сосредоточьтесь на развитии бизнеса.",
+    "description": "Более умный способ управлять вашими платежами. Бесполезно обрабатывать платежи и сосредоточиться на развитии вашего бизнеса.",
     "quickLinks": "Быстрые ссылки",
     "links": {
       "about": "О нас",
-      "privacy": "Политика конфиденциальности",
-      "terms": "Условия использования",
-      "contact": "Контакты"
+      "privacy": "политика конфиденциальности",
+      "terms": "Условия обслуживания",
+      "contact": "Контакт"
     },
     "newsletter": {
-      "title": "Будьте в курсе",
-      "description": "Подпишитесь на нашу рассылку для получения последних обновлений и предложений.",
-      "placeholder": "Ваш email адрес",
+      "title": "Оставайтесь в курсе",
+      "description": "Подпишитесь на нашу новостную рассылку для последних обновлений и предложений.",
+      "placeholder": "Ваш электронный адрес",
       "success": "Спасибо за подписку!",
-      "contact": "Свяжитесь с нами:"
+      "contact": "Связаться с нами:"
     }
   },
   "languages": {
-    "en": "English",
-    "ru": "Русский",
-    "es": "Español",
-    "fr": "Français",
-    "de": "Deutsch",
-    "zh": "中文"
+    "en": "Английский",
+    "ru": "Ррусский",
+    "es": "Эспаньол",
+    "fr": "Франсаис",
+    "de": "Deutsch"
   }
 }
